kubernetes/apps/victoria-metrics/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: victoria-metrics
spec:
  selector:
    app: victoria-metrics
  ports:
    - protocol: TCP
      port: 8428
      targetPort: 8428
